[workspace]
members = [
  "crates/*",
  "primitives",
  "parachain",
  "parachain/runtime/*",
  "rpc",
]

resolver = "2"

# disable incremental compilation to work around a compiler bug.
# See https://blog.rust-lang.org/2021/05/10/Rust-1.52.1.html
# When we upgrade compiler versions, we may be able to reenable incremental.
[profile.test]
incremental = false

[profile.dev]
incremental = false

[profile.release]
incremental = false

[patch."https://github.com/paritytech/substrate"]
frame-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-election-provider-support = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-executive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-support = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-support-procedural = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-support-procedural-tools = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-support-procedural-tools-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-system-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
frame-try-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-authority-discovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-bounties = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-collective = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-democracy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-grandpa = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-identity = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-im-online = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-indices = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-membership = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-mmr = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
mmr-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-nis = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-state-trie-migration = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-multisig = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-offences = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-offences-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-proxy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-recovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-scheduler = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-session-benchmarking  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-society = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-staking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-staking-reward-curve = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-staking-reward-fn = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-sudo = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-tips = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-transaction-payment = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-treasury = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-utility = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-vesting = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-authority-discovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-basic-authorship = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-chain-spec = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-client-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-client-db = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-epochs = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-executor = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-executor-common = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-executor-wasmtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-informant = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-network = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-network-gossip = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-network-common = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-peerset = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-rpc-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-rpc-server = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-service = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-sync-state-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-telemetry = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-transaction-pool-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-api = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-authority-discovery = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-block-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-blockchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-consensus = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-consensus-aura = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-consensus-babe = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-consensus-slots = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-externalities = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-inherents = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-keyring = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-maybe-compressed-blob = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-mmr-primitives = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-npos-elections = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-offchain = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-session = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-staking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-storage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-timestamp = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-transaction-pool = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-trie = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-version = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-weights = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
substrate-build-script-utils = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
substrate-wasm-builder = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
try-runtime-cli = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-sysinfo = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-bags-list = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-beefy = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-beefy-mmr = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-child-bounties = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-nomination-pools  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-nomination-pools-benchmarking  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-nomination-pools-runtime-api  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-preimage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-conviction-voting = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-fast-unstake = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-ranked-collective = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-referenda = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-whitelist = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-network-light = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-network-sync = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
fork-tree  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
mmr-gadget  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-storage-monitor  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
binary-merkle-tree  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-staking-runtime-api  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-beefy  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-beefy-rpc  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-grandpa  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-consensus-grandpa-rpc  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sc-network-transactions  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-consensus-beefy  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
sp-consensus-grandpa  = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-contracts = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }
pallet-contracts-primitives = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.43" }

[patch."https://github.com/paritytech/polkadot"]
kusama-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
pallet-xcm = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-cli = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-client = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-core-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-core-av-store = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-core-pvf = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-subsystem = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-overseer = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-parachain = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-primitives = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-runtime-common = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-service = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-statement-table = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
rococo-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
westend-runtime = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
xcm = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
xcm-builder = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
xcm-executor = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
xcm-simulator = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-availability-distribution = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-erasure-coding = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-network-bridge = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-jaeger = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
tracing-gum = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
tracing-gum-proc-macro = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-availability-recovery = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-collator-protocol = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-collation-generation = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-core-runtime-api = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-metrics = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }
polkadot-node-subsystem-types = { git = "https://github.com/paritytech//polkadot", branch = "release-v0.9.43" }

[patch."https://github.com/paritytech/cumulus"]
cumulus-client-cli = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-client-network = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-client-service = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-pallet-parachain-system  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-primitives-core = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-primitives-utility = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
parachain-info  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-relay-chain-inprocess-interface  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-relay-chain-rpc-interface  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-client-collator  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }
cumulus-relay-chain-minimal-node  = { git = "https://github.com/paritytech//cumulus", branch = "polkadot-v0.9.43" }

[patch."https://github.com/open-web3-stack/open-runtime-module-library"]
orml-asset-registry = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }
orml-oracle = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }
orml-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }
orml-traits = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }
orml-unknown-tokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }
orml-utilities = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }
orml-vesting = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }
orml-xcm-support = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }
orml-xcm = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }
orml-xtokens = { git = "https://github.com/open-web3-stack//open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a" }

[patch."https://github.com/paritytech/frontier"]
fc-consensus = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
fc-db = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
fc-mapping-sync = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
fc-rpc = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
fc-rpc-core = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
fc-storage = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }

fp-ethereum = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
fp-evm = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
fp-rpc = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
fp-self-contained = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }

pallet-base-fee = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
pallet-ethereum = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
pallet-evm = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
pallet-evm-chain-id = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
pallet-evm-precompile-dispatch = { git = "https://github.com/paritytech//frontier", branch = "polkadot-v0.9.43" }
