[package]
name = "dex-general"
version = "0.4.4"
authors = ["Zenlink Developers", "Interlay Ltd"]
edition = "2021"
license = "Apache 2.0"

[dependencies]
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.119", optional = true }
# alias "parity-scale-code" to "codec"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

# Orml dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "28a2e6f0df9540d91db4018c7ecebb8bfc217a2a", default-features = false }

[dev-dependencies]
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.43' }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
proptest = "1.1.0"

[features]
default = ["std"]
std = [
    "log/std",
    "serde",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-arithmetic/std",

    "orml-traits/std",
    "orml-tokens/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]
